# yam

./: Cargo.toml  README.md  config.toml
docs/: sudoers-setup.md
src/: app.rs  main.rs
src/infra/: config.rs  mod.rs  rpc.rs  service.rs
src/ui/: dashboard.rs  mod.rs  playground.rs  settings.rs
