[package]
name = "yam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitcoincore-rpc = "0.19.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6"
futures = "0.3.32"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.38.3"
chrono = "0.4.39"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
